[gd_scene load_steps=9 format=3 uid="uid://bb3qjdfidsndm"]

[ext_resource type="PackedScene" uid="uid://cifyrvq8d274l" path="res://scenes/state_machine.tscn" id="1_5q2yf"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_1/enemy_1.gd" id="1_jafqu"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_1/Enemy1_spotted.gd" id="2_7dlv7"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_1/Enemy1_wander.gd" id="4_coerm"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_1/Enemy1_Search.gd" id="5_p5wdh"]
[ext_resource type="PackedScene" uid="uid://c33wcmgvgldsm" path="res://scenes/enemy/detection.tscn" id="6_eswsp"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_x6a6b"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hu0t6"]

[node name="Enemy_1" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 15
script = ExtResource("1_jafqu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_x6a6b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_hu0t6")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5
target_desired_distance = 0.1

[node name="state machine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("1_5q2yf")]
initial_state = NodePath("Enemy1_Wander")

[node name="Enemy1_Everything" type="Node" parent="state machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("2_7dlv7")
enemy = NodePath("../..")

[node name="Enemy1_Wander" type="Node" parent="state machine"]
script = ExtResource("4_coerm")
wall_detector_mask = 1

[node name="Enemy1_Search" type="Node" parent="state machine"]
script = ExtResource("5_p5wdh")

[node name="Detection" parent="." instance=ExtResource("6_eswsp")]

[node name="StateLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
sorting_offset = 100.0
pixel_size = 0.002
billboard = 1
double_sided = false
fixed_size = true
text = "<State>"

[connection signal="target_reached" from="." to="state machine/Enemy1_Wander" method="_on_enemy_1_target_reached"]
[connection signal="target_reached" from="." to="state machine/Enemy1_Search" method="_on_enemy_1_target_reached"]
[connection signal="detection_entered" from="Detection" to="state machine/Enemy1_Wander" method="_on_detection_detection_entered"]
[connection signal="detection_entered" from="Detection" to="state machine/Enemy1_Search" method="_on_detection_detection_entered"]
[connection signal="detection_exited" from="Detection" to="state machine/Enemy1_Everything" method="_on_detection_detection_exited"]
